Allow determining if an SVG value has been specified to enable animation

https://bugs.webkit.org/show_bug.cgi?id=269481

Reviewed by NOBODY (OOPS!).

When checking for the "presence" of a value (if a value has been
specified - either via an attribute or via an animation), using
hasAttribute is not sufficient since if misses if the value is being
animated.

We already had `isAnimatedAttribute`, which accounts for
animations then use it with `hasAttribute` via 'OR' condition.

NOTE - It fails in both 'Legacy' and 'LBSE', this fixes for both.
Although, in case of 'Legacy', we do still not pass all tests but
I would mark those cases as 'failing' expectation and we will
remove them once 'LBSE' is turned on by default.

Inspired by (& Tests): https://chromium.googlesource.com/chromium/blink/+/9102ba31c8dbaf5bd47d67a4c6450fbbaf75d43d

* Source/WebCore/svg/SVGLinearGradientElement.cpp:
(setGradientAttributes):
* Source/WebCore/svg/SVGPatternElement.cpp:
(collectPatternAttributes):
* Source/WebCore/svg/SVGRadialGradientElement.cpp:
(setGradientAttributes):

> Add Test Case & Expectations:
* LayoutTests/svg/animations/no-attr-radialgradient-spreadmethod.svg:
* LayoutTests/svg/animations/no-attr-radialgradient-spreadmethod-expected.svg:
* LayoutTests/svg/animations/no-attr-radialgradient-r.svg:
* LayoutTests/svg/animations/no-attr-radialgradient-r-expected.svg:
* LayoutTests/svg/animations/no-attr-radialgradient-gradientunits.svg:
* LayoutTests/svg/animations/no-attr-radialgradient-gradientunits-expected.svg:
* LayoutTests/svg/animations/no-attr-radialgradient-gradienttransform.svg:
* LayoutTests/svg/animations/no-attr-radialgradient-gradienttransform-expected.svg:
* LayoutTests/svg/animations/no-attr-radialgradient-fy.svg:
* LayoutTests/svg/animations/no-attr-radialgradient-fy-expected.svg:
* LayoutTests/svg/animations/no-attr-radialgradient-fx.svg:
* LayoutTests/svg/animations/no-attr-radialgradient-fx-expected.svg:
* LayoutTests/svg/animations/no-attr-radialgradient-fr.svg:
* LayoutTests/svg/animations/no-attr-radialgradient-fr-expected.svg:
* LayoutTests/svg/animations/no-attr-radialgradient-cy.svg:
* LayoutTests/svg/animations/no-attr-radialgradient-cy-expected.svg:
* LayoutTests/svg/animations/no-attr-radialgradient-cx.svg:
* LayoutTests/svg/animations/no-attr-radialgradient-cx-expected.svg:
* LayoutTests/svg/animations/no-attr-pattern-y.svg:
* LayoutTests/svg/animations/no-attr-pattern-y-expected.svg:
* LayoutTests/svg/animations/no-attr-pattern-x.svg:
* LayoutTests/svg/animations/no-attr-pattern-x-expected.svg:
* LayoutTests/svg/animations/no-attr-pattern-width.svg:
* LayoutTests/svg/animations/no-attr-pattern-width-expected.svg:
* LayoutTests/svg/animations/no-attr-pattern-viewbox.svg:
* LayoutTests/svg/animations/no-attr-pattern-viewbox-expected.svg:
* LayoutTests/svg/animations/no-attr-pattern-patternunits.svg:
* LayoutTests/svg/animations/no-attr-pattern-patternunits-expected.svg:
* LayoutTests/svg/animations/no-attr-pattern-patterntransform.svg:
* LayoutTests/svg/animations/no-attr-pattern-patterntransform-expected.svg:
* LayoutTests/svg/animations/no-attr-pattern-patterncontentunits.svg:
* LayoutTests/svg/animations/no-attr-pattern-patterncontentunits-expected.svg:
* LayoutTests/svg/animations/no-attr-pattern-par.svg:
* LayoutTests/svg/animations/no-attr-pattern-par-expected.svg:
* LayoutTests/svg/animations/no-attr-pattern-height.svg:
* LayoutTests/svg/animations/no-attr-pattern-height-expected.svg:
* LayoutTests/svg/animations/no-attr-lineargradient-y2.svg:
* LayoutTests/svg/animations/no-attr-lineargradient-y2-expected.svg:
* LayoutTests/svg/animations/no-attr-lineargradient-y1.svg:
* LayoutTests/svg/animations/no-attr-lineargradient-y1-expected.svg:
* LayoutTests/svg/animations/no-attr-lineargradient-x2.svg:
* LayoutTests/svg/animations/no-attr-lineargradient-x2-expected.svg:
* LayoutTests/svg/animations/no-attr-lineargradient-x1.svg:
* LayoutTests/svg/animations/no-attr-lineargradient-x1-expected.svg:
* LayoutTests/svg/animations/no-attr-lineargradient-spreadmethod.svg:
* LayoutTests/svg/animations/no-attr-lineargradient-spreadmethod-expected.svg:
* LayoutTests/svg/animations/no-attr-lineargradient-gradientunits.svg:
* LayoutTests/svg/animations/no-attr-lineargradient-gradientunits-expected.svg:
* LayoutTests/svg/animations/no-attr-lineargradient-gradienttransform.svg:
* LayoutTests/svg/animations/no-attr-lineargradient-gradienttransform-expected.svg: